<package>
	<name>liblxsingl</name>
	<version>1.0.0</version>
	<description>lx singleton lib</description>
	<maintainer email="mjshi@robvision.cn">Minjie</maintainer>
	<license>MIT</license>

	<!-- DEPENDENT-->
	<buildtool_depend>catkin</buildtool_depend>

    <build_depend>lxind_msgs</build_depend>
    <build_depend>liblxtask</build_depend>
    <build_depend>liblxutil</build_depend>
    <build_depend>tf</build_depend>

	<run_depend>lxind_msgs</run_depend>
	<run_depend>liblxtask</run_depend>
	<run_depend>liblxutil</run_depend>
	<run_depend>tf</run_depend>

</package>