<package>
	<name>liblxtask</name>
	<version>1.0.0</version>
	<description>lx task common lib</description>
	<maintainer email="mjshi@robvision.cn">Minjie</maintainer>
	<license>MIT</license>

    <build_depend>module_keys</build_depend>

	<run_depend>module_keys</run_depend>
	
	<!-- DEPENDENT-->
	<buildtool_depend>catkin</buildtool_depend>

</package>