<package>
	<name>pcl_module</name>
	<version>1.0.0</version>
	<description>The pcl module of lanxin robot</description>
	<maintainer email="mjshi@robvision.cn">Renjie</maintainer>
	<license>MIT</license>
	
	<!-- DEPENDENT-->
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>module_keys</build_depend>
	<build_depend>laser_geometry</build_depend>
	<build_depend>pcl_conversions</build_depend>
	<build_depend>lxind_msgs</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>module_keys</run_depend>
	<run_depend>laser_geometry</run_depend>
	<run_depend>pcl_conversions</run_depend>
	<run_depend>lxind_msgs</run_depend>

</package>