<package>
	<name>subtask_module</name>
	<version>1.0.0</version>
	<description>The sub task module of lanxin robot</description>
	<maintainer email="mjshi@robvision.cn">Minjie</maintainer>
	<license>MIT</license>
	
	<!-- DEPENDENT-->
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
    <build_depend>module_keys</build_depend>
    <build_depend>liblxtask</build_depend>
    <build_depend>liblxutil</build_depend>
    <build_depend>liblxsingl</build_depend>

	<run_depend>roscpp</run_depend>
    <run_depend>module_keys</run_depend>
    <run_depend>liblxtask</run_depend>
    <run_depend>liblxutil</run_depend>
    <run_depend>liblxsingl</run_depend>

</package>