<package>
	<name>tcp_module</name>
	<version>1.0.0</version>
	<description>The tcp module of lanxin robot</description>
	<maintainer email="lchen@robvision.cn">Minjie</maintainer>
	<license>MIT</license>
	
	<!-- DEPENDENT-->
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>geometry_msgs</build_depend>
    <build_depend>lxind_msgs</build_depend>
    <build_depend>module_keys</build_depend>
    <build_depend>liblxtask</build_depend>


	<run_depend>roscpp</run_depend>
	<run_depend>geometry_msgs</run_depend>
    <run_depend>lxind_msgs</run_depend>
    <run_depend>module_keys</run_depend>
    <run_depend>liblxtask</run_depend>

</package>