<package>
  <name>lxind_msgs</name>
  <version>1.0.0</version>
  <description>
    Lxind custom messages
  </description>
  <maintainer email="mjshi@robvision.cn">Minjie SHI</maintainer>
  <license>BSD</license>

  <author>Minjie SHI</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
